--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html> 
+<html>
+  <head>
+    <title>Conor McGrath - Homepage</title>
+  </head>
+  
+  <body>
+    <h1>Hi, I'm Conor!</h1>  
+    
+    <p>Welcome to my website!</p> 
+  </body>
+</html>
